# feature-tree

./: .gitignore  FEATURES.md  README.md  features.db  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: commit.md
.feat-tree/memories/: codebase_structure.md  debugging_mcp_paths.md  handoff.md  suggested_commands.md
commands/: commit.md  handoff.md
docs/plans/: 2025-12-26-feature-tree-design.md  2025-12-26-feature-tree-implementation.md
feature-tree/: pyproject.toml
feature-tree/.claude-plugin/: plugin.json
feature-tree/feature_tree/: db.py  markdown.py  mcp_server.py
feature-tree/hooks/: session-start.py
feature-tree/skills/bootstrap/: SKILL.md
feature-tree/skills/brainstorm/: SKILL.md
feature_tree/: db.py  mcp_server.py  session_hook.py
ft-mem/: README.md
ft-mem/.claude-plugin/: plugin.json
ft-mem/hooks/: hooks.json  run-python-hook.cmd  session-start.py
ft-mem/skills/onboarding/: SKILL.md
hooks/: session-start.py  session-start.sh
skills/onboarding/: SKILL.md
tests/: test_db.py  test_markdown.py
